# eval-topo

./: .gitignore  README.md
Code/: CMakeLists.txt
Code/include/: AffineTransformation.h  Homology.h  ImageTransformation.h  Interpolation.h  Topology.h
Code/output/: Al100_bic.vol  Al100_bil.vol  Al100_nn.vol
Code/samples/2D/: churchmodif.pgm  circle.pgm
Code/src/: evalTopoTrans2D.cpp  evalTopoTrans3D.cpp  viewer3D.cpp
Documents/CR_Reu/: CR_2021-09-29.md  CR_2021-10-06.md  CR_2021-10-13.md  CR_2021-11-03.md  CR_2021-11-10.md  CR_2021-11-17.md  CR_2021-11-24.md  CR_2021-12-01.md  CR_2021-12-09.md  CR_2022-01-05.md  CR_2022-01-19.md  CR_2022-01-26.md
